@@ -22,12 +22,23 @@ allprojects {
         appName = cfg.name
         packageName = cfg.package
         packageDir = cfg.package.replace('.', '/')
-        vals = [[ "%APP_NAME%", "%PACKAGE%", "%PACKAGE_DIR%" ],[ appName, packageName, packageDir ]]
+        screenOrientation = cfg.window.orientation ? cfg.window.orientation : "landscape"
         nonVersion = file('VERSION').exists() ? file('VERSION').text.trim() : file('../VERSION').text.trim()
         gdxVersion = '1.5.5'
         roboVMVersion = '1.0.0'
         box2DLightsVersion = '1.3'
         kryonetVersion = '2.22.0-RC1'
+        vals = [[
+            "%APP_NAME%",
+            "%PACKAGE%",
+            "%PACKAGE_DIR%",
+            "%SCREEN_ORIENTATION%"
+        ],[
+            appName,
+            packageName,
+            packageDir,
+            screenOrientation
+        ]]
     }
 
     repositories {
@@ -283,7 +294,7 @@ def copyAndReplace(input, out) {
     def total = values[0].size() - 1
     def txt = file(input).text
     
-    for(i in 0..total-1) {
+    for(i in 0..total) {
         txt = txt.replace(values[0][i], values[1][i])
     }
     
