@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -15,8 +16,8 @@
         android:theme="@style/GdxTheme" >
         <activity
             android:name="%PACKAGE%.android.AndroidLauncher"
-            android:label="%APP_NAME%" 
-            android:screenOrientation="landscape"
+            android:label="%APP_NAME%"
+            android:screenOrientation="%SCREEN_ORIENTATION%"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,5 +25,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
